src/negative_test_cases/Testcases/no_main_method.stl

boolean a = 5 < 6;

